--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -20,7 +20,7 @@
 			<button type="button" class="control-panel__button button button--transparent">Mac</button>
 			<button type="button" class="control-panel__button button button--transparent">Аксессуары</button>
 			<button type="button" class="control-panel__button button button--transparent">Другое</button>
-			<button type="button" class="button-filter">
+			<button type="button" class="button-filter button-filter__filter">
 				<svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path d="M20.1053 -1.26532e-07L20.1053 8.25M20.1053 8.25C21.0702 8.25 23 8.8 23 11C23 13.2 21.0702 13.75 20.1053 13.75M20.1053 8.25C19.1404 8.25 17.2106 8.8 17.2106 11C17.2106 13.2 19.1404 13.75 20.1053 13.75M20.1053 13.75L20.1053 22" stroke="#2A2A2A"/>
 					<path d="M12.0003 -1.26532e-07L12.0003 2.75M12.0003 2.75C12.9652 2.75 14.895 3.3 14.895 5.5C14.895 7.7 12.9652 8.25 12.0003 8.25M12.0003 2.75C11.0354 2.75 9.1056 3.3 9.1056 5.5C9.1056 7.7 11.0354 8.25 12.0003 8.25M12.0003 8.25L12.0003 22" stroke="#2A2A2A"/>
@@ -29,6 +29,9 @@
 				 
 				<span class="visually-hidden">Фильтры</span>
 			</button>
+
+			{{> filter-modal}}
+
 			<button type="button" class="button-filter button-filter__sort">
 				<svg width="24" height="20" viewBox="0 0 24 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path d="M5.66667 18.3333V1M5.66667 1L10.3333 7.19048M5.66667 1L1 7.19048" stroke="#2A2A2A"/>
@@ -38,22 +41,7 @@
 				<span class="visually-hidden">Сортировка</span>
 			</button>
 			
-			<div class="sort-modal">
-				<div class="sort-modal__inner">
-					<p class="sort-modal__title h3">Сортировка</p>
-					<form action="" class="sort-modal__form">
-						<div class="sort-modal__field">
-							<input type="radio" name="sort" id="ascending" class="sort-modal__input" checked>
-							<label for="ascending" class="sort-modal__label">По возрастанию</label>
-						</div>
-
-						<div class="sort-modal__field">
-							<input type="radio" name="sort" id="discending" class="sort-modal__input">
-							<label for="discending" class="sort-modal__label">По убыванию</label>
-						</div>
-					</form>
-				</div>
-			</div>
+			{{> sort-modal}}
 		</div>
 
 		<div class="catalog__parameters">
