--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,10 +12,12 @@
 	"partials/graph-modal",
 	"partials/perm-modal",
 	"partials/city-modal",
+	"partials/sort-modal",
+	"partials/filter-modal",
+	"partials/filter-modal-form",
 	"partials/cart",
 	"partials/cart-card",
 	"partials/cart-form",
-	"partials/sort-modal",
 	"partials/button",
 	"partials/city-button",
 	"partials/button-square",
