--- a/src/scss/partials/_catalog-cart.scss
+++ b/src/scss/partials/_catalog-cart.scss
@@ -18,7 +18,19 @@
 		display: flex;
 		flex-direction: column;
 		row-gap: 30px;
-		margin-bottom: 30px;
+		// margin-bottom: 30px;
+	}
+
+	&__form {
+		display: flex;
+		flex-direction: column;
+		row-gap: 45px;
+	}
+
+	&__parameters {
+		display: flex;
+		flex-direction: column;
+		row-gap: 30px;
 	}
 
 	&__price {
@@ -43,6 +55,12 @@
 	}
 
 	&__button-add {
+		@include button-reset;
+
+		display: block;
 		width: 100%;
+		height: 100%;
+		z-index: 2;
+		color: var(--color-light);
 	}
 }
