--- a/src/scss/partials/_color-button.scss
+++ b/src/scss/partials/_color-button.scss
@@ -48,11 +48,20 @@
 				border: var(--border);
 				border-color: var(--color-gray-alt);
 				border-width: 2px;
-				}
 			}
+		}
+	}
+
+	&__input {
+		width: 100%;
+		height: 100%;
+		border-radius: inherit;
+		border: none;
+		z-index: 2;
+		background-color: transparent;
 
 		&.active {
-			.color-button__color {
+			& + .color-button__color {
 				@include square(40px);
 
 				border-radius: var(--border-radius-small);
