--- a/src/scss/partials/_color-button.scss
+++ b/src/scss/partials/_color-button.scss
@@ -53,12 +53,7 @@
 	}
 
 	&__input {
-		width: 100%;
-		height: 100%;
-		border-radius: inherit;
-		border: none;
-		z-index: 2;
-		background-color: transparent;
+		display: none;
 
 		&.active {
 			& + .color-button__color {
