--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -99,7 +99,7 @@
 
 								<div class="catalog-cart__memory">
 									<p class="catalog-cart__text">Память</p>
-									<div class="catalog-cart__buttons">
+									<div class="catalog-cart__buttons" id="form-1_memory_group">
 										<label class="catalog-cart__button memory-button">
 											<input type="radio" name="memory" value="64 GB" class="memory-button__input" data-validate-field="memory">
 											<span class="memory-button__text">64 GB</span>
@@ -145,7 +145,7 @@
 							<div class="just-validate-error-messages"></div>
 
 							<div class="catalog-cart__add button">
-								<input type="button" class="catalog-cart__button catalog-cart__button-add" value="Добавить в корзину">
+								<button type="submit" class="catalog-cart__button catalog-cart__button-add">Добавить в корзину</button>
 							</div>
 						</form>
 					</div>
