--- a/src/scss/partials/_memory-button.scss
+++ b/src/scss/partials/_memory-button.scss
@@ -7,10 +7,11 @@
 	width: 100px;
 	height: var(--button-height-small);
 	border: var(--border);
+	transition-duration: var(--transition-duration);
 
-	&:has(input[type="radio"]:checked) {
-		background-color: var(--color-gray-dark);
-		color: var(--color-light);
+	&.active {
+		background-color: var(--color-gray-dark) !important;
+		color: var(--color-light) !important;
 	}
 
 	&:where(.memory-button__cart) {
